# SWIGGY-TIME-PRIDICTION

./: .gitignore  Makefile  README.md  data.dvc  dvc.yaml  model_building.ipynb  params.yaml  pyproject.toml  swiggy.ipynb
.dvc/: config  requirments-dev.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: swiggy.ipynb
src/data/: data_cleaning.py  data_preparation.py
src/features/: data_preprocessing.py
