[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "SWIGGY TIME PRIDICTION"
version = "0.0.1"
description = "MLOP PROJECT TO PREDICT DILEVRY TIME"
authors = [
  { name = "UTKARSH GUPTA" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.14.2"


[tool.ruff]
line-length = 99
src = ["SWIGGY TIME PRIDICTION"]
include = ["pyproject.toml", "SWIGGY TIME PRIDICTION/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["SWIGGY TIME PRIDICTION"]
force-sort-within-sections = true

